fix: adjust margin for atf button to improve spacing

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -149,6 +149,7 @@
 }
 
 .atf-btn {
+  margin-top: 50px;
   display: inline-block;
   padding: 0.75rem 2rem;
   background-color: transparent;
@@ -160,7 +161,6 @@
   cursor: pointer;
   transition: all 0.2s;
   font-size: 1.2rem;
-  margin-top: 1rem;
 }
 
 .atf-btn:hover {
